fixed navigation problem on iphone 4 size screens portrait

--- a/css/home.css
+++ b/css/home.css
@@ -955,6 +955,15 @@ textarea{
 
 }
 
+@media (max-width: 319px){
+
+	.body-content div div h2:last-child{
+		margin-bottom: 47px;
+	}
+
+
+}
+
 
 
 
